Update github links

--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ url:              http://davidx.me
 author:
   name:           'David Xie'
   linkedin:       https://twitter.com/davidx_me
-  github:         https://github.com/kingheaven
+  github:         https://github.com/david-xie
   aboutme:        http://about.me/davidx
   linkedin:       https://www.linkedin.com/profile/view?id=57886859
 
 paginate:         5
 
-github:           https://github.com/kingheaven
+github:           https://github.com/david-xie
