Update some social network usernames

--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username: david-xie
+github_username: david30xie
 bitbucket_username:
-stackoverflow_id: david-xie
-twitter_username:
+stackoverflow_id: david30xie
+twitter_username: david30xie
 skype_username:
 steam_nickname:
 google_plus_id:
